edits to mapping Rmd

--- a/mapping_RSEM_bowtie.html
+++ b/mapping_RSEM_bowtie.html
@@ -134,6 +134,16 @@ $(document).ready(function () {
 --est_method RSEM --aln_method bowtie --trinity_mode \                              # counting and mapping method
 --output_dir rsem_outdir                                                            # output directory</code></pre>
 </div>
+<div id="build-transcript-and-gene-expression-matrices" class="section level2">
+<h2>Build Transcript and Gene Expression Matrices</h2>
+<pre class="bash"><code>perl /opt/trinityrnaseq-Trinity-v2.4.0/util/abundance_estimates_to_matrix.pl \
+--est_method RSEM \
+control_rep1/RSEM.genes.results control_rep2/RSEM.genes.results control_rep3/RSEM.genes.results control_rep4/RSEM.genes.results \
+moderate_rep1/RSEM.genes.results moderate_rep2/RSEM.genes.results moderate_rep3/RSEM.genes.results moderate_rep4/RSEM.genes.results \
+extreme_rep1/RSEM.genes.results extreme_rep2/RSEM.genes.results extreme_rep3/RSEM.genes.results extreme_rep4/RSEM.genes.results \
+relaxation_rep1/RSEM.genes.results relaxation_rep2/RSEM.genes.results relaxation_rep3/RSEM.genes.results relaxation_rep4/RSEM.genes.results \
+upwelling_rep1/RSEM.genes.results upwelling_rep2/RSEM.genes.results upwelling_rep3/RSEM.genes.results upwelling_rep4/RSEM.genes.results \</code></pre>
+</div>
 
 
 
