--- a/mapping_RSEM_bowtie.html
+++ b/mapping_RSEM_bowtie.html
@@ -136,13 +136,24 @@ $(document).ready(function () {
 </div>
 <div id="build-transcript-and-gene-expression-matrices" class="section level2">
 <h2>Build Transcript and Gene Expression Matrices</h2>
+<p>first make a file.listing_target_files.txt using <code>nano</code></p>
 <pre class="bash"><code>perl /opt/trinityrnaseq-Trinity-v2.4.0/util/abundance_estimates_to_matrix.pl \
 --est_method RSEM \
+--name_sample_by_basedir \   # name 'RSEM.genes.results' file by base directory
 control_rep1/RSEM.genes.results control_rep2/RSEM.genes.results control_rep3/RSEM.genes.results control_rep4/RSEM.genes.results \
 moderate_rep1/RSEM.genes.results moderate_rep2/RSEM.genes.results moderate_rep3/RSEM.genes.results moderate_rep4/RSEM.genes.results \
 extreme_rep1/RSEM.genes.results extreme_rep2/RSEM.genes.results extreme_rep3/RSEM.genes.results extreme_rep4/RSEM.genes.results \
 relaxation_rep1/RSEM.genes.results relaxation_rep2/RSEM.genes.results relaxation_rep3/RSEM.genes.results relaxation_rep4/RSEM.genes.results \
-upwelling_rep1/RSEM.genes.results upwelling_rep2/RSEM.genes.results upwelling_rep3/RSEM.genes.results upwelling_rep4/RSEM.genes.results \</code></pre>
+upwelling_rep1/RSEM.genes.results upwelling_rep2/RSEM.genes.results upwelling_rep3/RSEM.genes.results upwelling_rep4/RSEM.genes.results </code></pre>
+</div>
+<div id="download-the-output-files-to-github-430-repo" class="section level2">
+<h2>Download the output files to github 430 repo</h2>
+<p>matrix.counts.matrix matrix.TMM.EXPR.matrix matrix.TPM.not_cross_norm matrix.TPM.not_cross_norm.TMM_info.txt</p>
+<p>First, open a new terminal window on home computer and use <code>scp</code> to secure copy these files to the bio430 github repository</p>
+<pre class="bash"><code>scp loga8761s@treebeard.csumb.edu:/home/data/rockfish/EXP10_Scaur_fluct_gill/QC/*matrix* /Users/loga8761/github/bio430  # use * wildcard to get all files with 'matrix'</code></pre>
+</div>
+<div id="from-here-we-will-work-in-rstudio" class="section level2">
+<h2>From here, we will work in Rstudio</h2>
 </div>
 
 
